objects/MDM_Country_State__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Country state mapping</description>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>country code</description>
        <label>Country Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <description>state code</description>
        <label>State Code</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Name__c</fullName>
        <description>state name</description>
        <label>State Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>MDM Country State Mapping</label>
</CustomObject>